# paper-translate

./: README.md  pyproject.toml
src/: main.py
