[project]
name = "paper-translate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "onnx>=1.17.0",
    "onnxruntime-gpu>=1.19.2",
    "openai>=1.52.0",
    "pix2text>=1.1.1.2",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]

[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/cu121/torch",
]
